<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context="zeno.name.androidtestpractice.MainActivity"
  >

  <android.support.v7.widget.AppCompatTextView
    android:id="@+id/tv_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:padding="4dp"
    android:text="hello"
    />

  <android.support.v7.widget.AppCompatEditText
    android:id="@+id/et_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    />

  <android.support.v7.widget.AppCompatButton
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="sayHello"
    android:text="@string/main_say_hello"
    />

  <android.support.v7.widget.AppCompatButton
    android:id="@+id/btn_show_test_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/main_show_test_fragment"
    />

  <FrameLayout
    android:id="@+id/layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    />


</LinearLayout>
