<resources>
  <string name="app_name">AndroidTestPractice</string>
  <string name="main_say_hello">Say Hello!</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="main_show_test_fragment">show test fragment</string>
</resources>
